css/templates.css
/*------------------------------------------------------------------
Template Layouts & Styling
Version: 1.0.2;
Author: ThemeMountain
Copyright: ThemeMountain
License: MIT

[Table of contents]

1. Common
2. Masonry
3. Headers
4. Side Navigation 
5. Overlay Navigation
6. Title Sections
7. Hero Sections
8. Feature Sections
9. Call to Action Sections
10. Form Sections
11. Testimonial Sections
12. Portfolio Sections
13. Logo Sections
14. Social Sections
15. Stat Sections
16. Fullscreen Sections
17. Pagination Sections
18. Map Sections
19. Footers
20. Blog Layouts
21. Caption Size Classes
-------------------------------------------------------------------*/

/*------------------------------------------------------------------
[1. Common]
*/
body,
.content{
	background-color: #fff;
}
.content {
    position: relative;
    top: -20px;
}
.section-block{
	width: 100%;
	position: relative;
}
.section-block.replicable-content{
	padding-top: 7rem;
	padding-bottom: 4rem;
}
.section-block.regular-content > .row > .column >*:first-child,
.section-block.replicable-content > .row > .column >*:first-child{
	margin-top: 0;
}

/* Background classes */
.background-fixed,
.background-fixed:before,
.background-fixed:after{
	background-attachment: fixed;
}
.mobile .background-fixed,
.mobile .background-fixed:before,
.mobile .background-fixed:after{
	background-attachment: scroll;
}
.background-cover,
.background-cover:before,
.background-cover:after,
.fullscreen-section.background-cover .background-image{
	background-position: center center;
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	background-repeat: no-repeat;
}
.background-full,
.fullscreen-section.background-full .background-image{
	background-size: 100%;
	background-position: center center;
	background-repeat: no-repeat;
}
.horizon{
	opacity: 0;
	visibility: hidden;
}
.hide{
	display: none;
}

/*------------------------------------------------------------------
[2. Masonry]
*/
.masonry-grid,
.row .masonry-grid{
	max-width: 100%;
	min-height: 30rem;
	visibility: hidden; 
	opacity: 0;
}
.masonry-grid{
	-webkit-transition-property: opacity, visibility;
	   -moz-transition-property: opacity, visibility;
	    -ms-transition-property: opacity, visibility;
	     -o-transition-property: opacity, visibility;
	        transition-property: opacity, visibility;
	-webkit-transition-duration: 0.8s;
	   -moz-transition-duration: 0.8s;
	    -ms-transition-duration: 0.8s;
		 -o-transition-duration: 0.8s;
			transition-duration: 0.8s;	    
}
.masonry-grid.filtering{
	-webkit-transition-property: height;
	   -moz-transition-property: height;
	    -ms-transition-property: height;
	     -o-transition-property: height;
	        transition-property: height;
	-webkit-transition-duration: 0.8s;
	   -moz-transition-duration: 0.8s;
	    -ms-transition-duration: 0.8s;
		 -o-transition-duration: 0.8s;
			transition-duration: 0.8s;
}

/* Fixed Dimension Grid 
   Wrap any content grid in .masonry-set-demensions
   to set grid item with and height. Use .large and .portrait on
   .grid-item to specify grid item format.
*/
.masonry-set-dimensions{
	padding-top: 7rem;
	padding-bottom: 6rem;
}

/* Full Width and no margins */
.masonry-set-dimensions.full-width .row{
	max-width: 100%;
}
.masonry-set-dimensions.full-width [class*="content-grid"]{
	padding-left: 0;
	padding-right: 0;
	margin-left: 0;
	margin-right: 0;
}
.masonry-set-dimensions.full-width > .row > .column{
	padding-left: 0.5rem;
	padding-right: 0.5rem;
}
.masonry-set-dimensions.no-margins [class*="content-grid"],
.masonry-set-dimensions.no-margins [class*="content-grid"] .grid-item{
	padding: 0 !important;
	margin: 0 !important;
}
.masonry-set-dimensions.full-width.no-margins{
	padding: 0;
}

/* Set unique paddings/margins */
.masonry-set-dimensions.no-padding-top{
	padding-top: 1rem;
}
.masonry-set-dimensions.no-padding-bottom{
	padding-bottom: 0.5rem;
}
.masonry-set-dimensions [class*="content-grid"]{
	padding-left: 0;
	padding-right: 0;
	margin-left: -1.5rem;
	margin-right: -1.5rem;
}
.masonry-set-dimensions [class*="content-grid"] .grid-item{
	padding-left: 1.5rem;
	padding-right: 1.5rem;
}
.masonry-set-dimensions > .row > .column{
	padding-left: 1rem;
	padding-right: 1rem;
}
.masonry-set-dimensions.no-margins > .row > .column{
	padding-left: 1.5rem;
	padding-right: 1.5rem;
}
.masonry-set-dimensions.no-margins.full-width > .row > .column{
	padding-left: 0rem;
	padding-right: 0rem;
}
.masonry-set-dimensions [class*="content-grid"]{
	padding-left: 0;
	padding-right: 0;
	margin-top: -0.5rem;
	margin-left: 0;
	margin-right: 0;
}
.masonry-set-dimensions [class*="content-grid"] .grid-item{
	margin-bottom: 0;
	padding: 0.5rem;
	position: relative;
}
.masonry-set-dimensions .thumbnail{
	height: 100%;
	overflow: hidden;
	margin-bottom: 0;
}
.masonry-set-dimensions .grid-item{
	overflow: hidden;
}
.masonry-set-dimensions .grid-item img{
	width: 100%;
}

/* Content */
.masonry-set-dimensions .content-outer{
	width: 100%;
	height: 100%;
	display: table;
	position: relative;
	bottom: 0;
}
.masonry-set-dimensions .thumbnail + .content-outer{
	position: absolute;
}
.masonry-set-dimensions .content-inner{
	width: 100%;
	height: 100%;
	padding: 3rem;
	display: table-cell;
	vertical-align: middle;
}
.masonry-set-dimensions .content-inner > *:first-child{
	margin-top: 0;
}
.masonry-set-dimensions .content-inner > *:last-child{
	margin-bottom: 0;
}
.masonry-set-dimensions .content-slider,
.masonry-set-dimensions video,
.masonry-set-dimensions iframe{
	width: 100% !important;
	height: 100% !important;
}
.masonry-set-dimensions .content-slider img{
	width: auto;
}
.masonry-set-dimensions .mejs-container{
	width: 20rem;
	height: 3rem;
	margin-left: -10rem;
	margin-top: -1.5rem;
	position: absolute;
	left: 50%;
	top: 50%;
}

/* Isotope Item */
.isotope-item {
  z-index: 2;
}

.isotope-hidden.isotope-item {
  pointer-events: none;
  z-index: 1;
}
/* ... */

